[gd_scene load_steps=9 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/bat-fococlipping-standard.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 178, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 178, 0, 178, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 128, 178, 128 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "fly",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.75, 17.25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.5, 20.5 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 91.5, 35.875 )
scale = Vector2( 0.646067, 0.632353 )
frames = SubResource( 6 )
animation = "fly"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 88, 28 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 87, 85 )
scale = Vector2( 0.285145, 0.35 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( 83, 90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 5.5, -62.5 )
shape = SubResource( 2 )

[node name="Stun_timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Stun_timer" to="." method="_on_Stun_timer_timeout"]
